--- a/1.ipynb
+++ b/1.ipynb
@@ -15,7 +15,7 @@
     "import plotly.graph_objs as go\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "plotly.tools.set_credentials_file(username='iremoze', api_key='pRAt4yKgtusULCVgagiv')\n"
+    "plotly.tools.set_credentials_file(username='iremoze', api_key='zzzzz')\n"
    ]
   },
   {
