--- a/1test-Anomaly Detection.ipynb
+++ b/1test-Anomaly Detection.ipynb
@@ -14,7 +14,7 @@
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
     "\n",
-    "plotly.tools.set_credentials_file(username='iremoze', api_key='pRAt4yKgtusULCVgagiv')\n"
+    "plotly.tools.set_credentials_file(username='iremoze', api_key='zzzzzzzz')\n"
    ]
   },
   {
