--- a/Cluster.ipynb
+++ b/Cluster.ipynb
@@ -13,7 +13,7 @@
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
     "\n",
-    "plotly.tools.set_credentials_file(username='iremoze', api_key='pRAt4yKgtusULCVgagiv')\n",
+    "plotly.tools.set_credentials_file(username='iremoze', api_key='zzzzz')\n",
     "\n",
     "from sklearn.cluster import DBSCAN\n",
     "from collections import Counter\n",
